--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 distro==1.9.0
+dnspython==2.7.0
 fastapi==0.115.6
 filelock==3.16.1
 fsspec==2024.12.0
@@ -19,6 +20,7 @@ openai==1.59.6
 packaging==24.2
 pydantic==2.10.5
 pydantic_core==2.27.2
+pymongo==4.11.1
 python-dotenv==1.0.1
 PyYAML==6.0.2
 regex==2024.11.6
