--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,13 +14,16 @@ httpcore==1.0.7
 httpx==0.28.1
 huggingface-hub==0.27.1
 idna==3.10
+iniconfig==2.0.0
 jiter==0.8.2
 numpy==2.2.1
 openai==1.59.6
 packaging==24.2
+pluggy==1.5.0
 pydantic==2.10.5
 pydantic_core==2.27.2
 pymongo==4.11.1
+pytest==8.3.4
 python-dotenv==1.0.1
 PyYAML==6.0.2
 regex==2024.11.6
